--- a/Import_Freight_BOI/Import_Freight_BOI/appsettings.json
+++ b/Import_Freight_BOI/Import_Freight_BOI/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "CONN": "Data Source=RTHSRV14;Initial Catalog=ImportExportDB;Persist Security Info=True;User ID=sa;Password=pwpolicy;"
+    "CONN": "Data Source=RTHSRV14;Initial Catalog=ImportExportDB;Persist Security Info=True;User ID=sa;Password=pwpolicy;",
+    "Con_GFDReport": "Data Source=RTHSRV09;Initial Catalog=ImportExportDB;Persist Security Info=True;User ID=sa;Password=pwpolicy;"
+
 
   },
   "Logging": {
